--- a/ex_6/ex6-15.html
+++ b/ex_6/ex6-15.html
@@ -13,7 +13,9 @@
     var score = prompt("황기태 님 점수를 입력하세요", 100);
     score = parseInt(score);
      score = parseInt(score);
-        if (score >= 90)
+        if (score >= 95)
+            grade = "A+";
+        else if (score >= 90)
             grade = "A";
         else if (score >= 80)
             grade = "B";
