--- a/ex_6/ex6-16.html
+++ b/ex_6/ex6-16.html
@@ -5,12 +5,18 @@
 <h3>switch 문으로 커피주문</h3>  
 <hr>
 <script>
-    var price = 0;
-    var coffee = prompt("무슨 커피 드릴까요?", "");
+    let price = 0;
+    let coffee = prompt("무슨 커피 드릴까요?", "");
     switch(coffee)
     {
+        case "americano":
+        case "아메리카노": price= 1500;
+        break;
+       case "ice americano":
+        case "아이스 아메리카노 ": price= 2000;
+        break;    
         case "espresso":
-        case "에스프레소" : price= 2000;
+        case "에스프레소" : price= 2500;
         break;
         case "카푸치노" : price=3000;
         break;
