--- a/ex_9/ex9-14.html
+++ b/ex_9/ex9-14.html
@@ -20,12 +20,12 @@ function changeImage() {
 <hr>
 <form>
 <select id="sel" onchange="changeImage()">
-<option value="images/apple.png">사과
-<option value="images/banana.png">바나나
-<option value="images/mango.png">망고
+<option value="../media/orange.jpg">오렌지
+<option value="../media/painapple.jpg">파인애플
+<option value="../media/kiwi.jpg">키위
 </select>
 <span id="mySpan">이미지 크기</span>
 </form>
-<p><img id="myImg" src="images/apple.png" alt="."></p>
+<p><img id="myImg" src="../media/orange.jpg" alt="."></p>
 </body>
 </html>
