--- a/ex_9/ex9-11.html
+++ b/ex_9/ex9-11.html
@@ -15,19 +15,19 @@ div
 <hr>
 이미지 위에 마우스를 움직일 때
 onmousemove 리스너가 실행되고,
-마우스의 위치를 보여줍니다. 
-<P><img src= "../media/beach.jpg" onmousemove="where(event)"></P>
+마우스의 위치를 보여줍니다.<P>
+<img src= "../media/beach.jpg" onmousemove="where(event)"><P>
 <div id="div"></div>
 <script>
-let div = document.write.getElementById("div");
+let div = document.getElementById("div");
 function where(e)
 {
     let text = "버튼=" + e.button + "<br>";
-    text +="(screenX,screenY)=" + e.screenX+ ","+e.scrrenY+"<br>";
-    text +="(clientX,clientY)=" + e.clientX+ ","+e,clientY+"<br>";
-    text +="(offsetX,offsetY)=" + e.offsetX+ ","+e.offsetY+"<br>";
-    text +="(x,y)=" + e.x+ "," + e.y+ "\n";
-    civ,innerHTML=text;
+    text += "(screenX,screenY)=" + e.screenX+ "," +e.screenY+"<br>";
+    text += "(clientX,clientY)=" + e.clientX+ "," +e.clientY+ "<br>";
+    text += "(offsetX,offsetY)=" + e.offsetX+ "," +e.offsetY+"<br>";
+    text += "(x,y)=" + e.x+ "," + e.y+ "\n";
+    div.innerHTML=text;
 }
 </script>
 </body>
